--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,11 @@
             <artifactId>opencv</artifactId>
             <version>3.2.0-1</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/net.bramp.ffmpeg/ffmpeg -->
+        <!-- https://mvnrepository.com/artifact/nu.pattern/opencv -->
         <dependency>
-            <groupId>net.bramp.ffmpeg</groupId>
-            <artifactId>ffmpeg</artifactId>
-            <version>0.6.2</version>
+            <groupId>nu.pattern</groupId>
+            <artifactId>opencv</artifactId>
+            <version>2.4.9-7</version>
         </dependency>
     </dependencies>
     <name>BEP Trackscape</name>
