--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,19 @@
 language: java
 jdk: oraclejdk8
+
+before_install:
+  - sudo apt-get update
+
+install:
+  - sudo apt-get install python-dev python-numpy
+
+before_script:
+  - git clone https://github.com/Itseez/opencv.git
+  - cd opencv
+  - mkdir build
+  - cd build
+  - cmake ..
+  - make -j4
+  - sudo make -j4 install
+  - mvn install:install-file -Dfile=/usr/local/share/OpenCV/java/opencv-300.jar -DgroupId=opencv -DartifactId=opencv -Dversion=3.0.0 -Dpackaging=jar
+  - cd ../..
