--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,3 +4,4 @@ build_script:
   - mvn clean package --batch-mode -DskipTest
 test_script:
   - mvn clean install --batch-mode
+  - mvn checkstyle:check
