--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>opencv</artifactId>
             <version>2.4.9-7</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.jfree/jfreechart -->
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.14</version>
+        </dependency>
     </dependencies>
     <name>BEP Trackscape</name>
     <url>https://github.com/egedebruin/Trackscape</url>
