--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>opencv</artifactId>
             <version>2.4.9-7</version>
         </dependency>
+        <dependency>
+            <groupId>com.data-artisans</groupId>
+            <artifactId>flink-training-exercises</artifactId>
+            <version>0.13.0</version>
+        </dependency>
     </dependencies>
     <name>BEP Trackscape</name>
     <url>https://github.com/egedebruin/Trackscape</url>
@@ -53,6 +58,11 @@
                         <groupId>org.junit.jupiter</groupId>
                         <artifactId>junit-jupiter-engine</artifactId>
                         <version>5.2.0-M1</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.googlecode.json-simple</groupId>
+                        <artifactId>json-simple</artifactId>
+                        <version>1.1.1</version>
                     </dependency>
                 </dependencies>
             </plugin>
