--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,13 @@
             <artifactId>opencv</artifactId>
             <version>2.4.9-7</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
         <dependency>
-            <groupId>com.data-artisans</groupId>
-            <artifactId>flink-training-exercises</artifactId>
-            <version>0.13.0</version>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
         </dependency>
+
     </dependencies>
     <name>BEP Trackscape</name>
     <url>https://github.com/egedebruin/Trackscape</url>
